[package]
name = "gir"
version = "0.1.0"
authors = ["Botev <botevmg@gmail.com>"]

[dependencies]
symbolic_polynomials = "0.1.0"
error-chain = "0.7.2"
slog = {version = "1.2", features = ["max_level_trace"] }
slog-term = "1.3.5"
tera = "0.6.2"

[lib]
name = "graph_ir"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/main.rs"
