[package]
name = "gir"
version = "0.0.1"
authors = ["Botev <botevmg@gmail.com>"]
license = "MIT or Apache-2.0"

[dependencies]
symbolic_polynomials =  { git = "https://github.com/Metadiff/symbolic_polynomials" }
error-chain = "0.7.2"
slog = {version = "1.2", features = ["max_level_trace"] }
slog-term = "1.3.5"
tera = "0.6.2"
ocl = "0.12.0"
arrayfire = "3.4.1"


[replace]
"ocl-core:0.3.2" = { git = "https://github.com/cogciprocate/ocl-core" }
"ocl:0.12.0" = { git = "https://github.com/cogciprocate/ocl/"}

[lib]
name = "gir"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/main.rs"
